<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/podesavanja_editor_kategorija_prevod" >
        <knez.assdroid.util.gui.ResetEditTextPreference
            xmlns:knez="http://knez.lol.com/"
            android:defaultValue="@string/podesavanja_editor_default_zamena_taga"
            android:key="editor_znak_minimizirani_tagovi"
            android:summary="@string/podesavanja_editor_znak_zamena_taga_summary"
            android:title="@string/podesavanja_editor_znak_zamena_taga_title"
            knez:srednje="@string/podesavanja_global_reset"
            knez:mozePrazno="false" />
        <ListPreference
            android:key="editor_font_text"
            android:defaultValue="@string/podesavanja_editor_default_dp_velicina_teksta"
            android:title="@string/podesavanja_editor_title_size"
            android:entries="@array/podesavanje_velicine_fonta"
            android:entryValues="@array/podesavanje_velicine_fonta" />
        <ListPreference
            android:key="editor_font_ostalo"
            android:defaultValue="@string/podesavanja_editor_default_dp_velicina_ostalog"
            android:title="@string/podesavanja_editor_ostalo_size"
            android:entries="@array/podesavanje_velicine_fonta"
            android:entryValues="@array/podesavanje_velicine_fonta" />
    </PreferenceCategory>

</PreferenceScreen>