<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <item
        android:id="@+id/menu_item_create_subtitle"
        android:orderInCategory="1"
        android:title="@string/editor_create_new_subtitle"/>
    
    <item
        android:id="@+id/menu_item_load_subtitle"
        android:orderInCategory="2"
        android:title="@string/editor_load_subtitle"/>

    <item
        android:id="@+id/menu_item_save_subtitle"
        android:orderInCategory="3"
        android:title="@string/common_save_subtitle"/>

    <item
        android:id="@+id/menu_item_settings"
        android:orderInCategory="4"
        android:title="@string/common_settings"/>

    <item
        android:id="@+id/menu_item_help"
        android:orderInCategory="5"
        android:title="@string/common_help"/>

</menu>