<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding_small" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/prevodilac_prethodna_linija"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="prethodna recenica"
            android:textSize="15dp" />
        
        <View style="@style/separator_fazon_lista" />

        <TextView
            android:id="@+id/prevodilac_tekuca_linija"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="tekuca recenica tekuca recenica tekuca recenica"
            android:textColor="#FFFFFF"
            android:textSize="20dp" />
        
        <View style="@style/separator_fazon_lista" />

        <TextView
            android:id="@+id/prevodilac_sledeca_linija"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="sledeca recenica"
            android:textSize="15dp" />

        <EditText
            android:id="@+id/prevodilac_unos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_small"
            android:gravity="top|left"
            android:inputType="textMultiLine"
            android:imeOptions="actionNext"
            android:lines="3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/prevodilac_dugme_kopiraj"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/prevodilac_copy"
                android:textSize="12dp" />

            <Button
                android:id="@+id/prevodilac_dugme_commit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/prevodilac_commit"
                android:textSize="12dp" />

            <Button
                android:id="@+id/prevodilac_dugme_commit_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/prevodilac_commit_next"
                android:textSize="12dp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>