<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/item_subtitle_line"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/stavka_prevod_prvi_red"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom" >

        <TextView
            android:id="@+id/stavka_prevod_redni_broj_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding_large"
            android:text="#340"
            android:textSize="@dimen/standard_font_ostalo_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stavka_prevod_vreme_od"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding_small"
            android:text="0:00:15.64"
            android:textSize="@dimen/standard_font_ostalo_size" />

        <TextView
            android:id="@+id/stavka_prevod_vreme_crtica"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding_small"
            android:text="@string/prevod_znak_izmedju_od_do"
            android:textSize="@dimen/standard_font_ostalo_size" />

        <TextView
            android:id="@+id/stavka_prevod_vreme_do"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0:00:15.64"
            android:textSize="@dimen/standard_font_ostalo_size" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/stavka_prevod_drugi_red"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="bottom"
        android:orientation="horizontal" >

            <TextView
                android:id="@+id/stavka_prevod_redni_broj_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding_large"
                android:text="#340"
                android:textSize="@dimen/standard_font_ostalo_size"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/stavka_prevod_tekst_stil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding_small"
                android:text="@string/prevod_style_"
                android:textSize="@dimen/standard_font_ostalo_size" />

            <TextView
                android:id="@+id/stavka_prevod_stil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="K6Reklama"
                android:textSize="@dimen/standard_font_ostalo_size" />

            <TextView
                android:id="@+id/stavka_prevod_tekst_actor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/padding_small"
                android:layout_marginLeft="@dimen/padding_large"
                android:text="@string/prevod_actor_"
                android:textSize="@dimen/standard_font_ostalo_size" />

            <TextView
                android:id="@+id/stavka_prevod_actor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Hakase"
                android:textSize="@dimen/standard_font_ostalo_size" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="horizontal" >
            
        <TextView
            android:id="@+id/stavka_prevod_redni_broj_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/padding_large"
            android:text="#340"
            android:textSize="@dimen/standard_font_ostalo_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stavka_prevod_tekst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="па будите сигурни да питате своје пријатеље"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/standard_font_text_size" />
    </LinearLayout>

</LinearLayout>